<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">DRMMusic</string>
    <string name="title_nav_msg">我的消息</string>
    <string name="title_nav_stop">定时停止播放</string>
    <string name="title_nav_night">夜间模式</string>
    <string name="title_nav_skin">主题换肤</string>
    <string name="title_nav_tobeartist">成为歌手</string>
    <string name="title_nav_upload">上传歌曲</string>
    <string name="title_nav_about">关于</string>


    <string name="cancel">取消</string>
    <string name="confirm">确定</string>

    <string name="tab_local_title_local">本地音乐</string>
    <string name="tab_local_title_recent">最近播放</string>
    <string name="tab_local_title_download">下载管理</string>
    <string name="tab_local_title_myArtist">我的歌手</string>

    <string name="song">单曲</string>
    <string name="artist">歌手</string>
    <string name="ablum">专辑</string>


    <string name="playall">播放全部</string>


    <string name="next_play">已加入下一首播放</string>
    <string name="queue_is_empty">播放队列为空</string>

    <string name="duration_format" translatable="false"><xliff:g id="hours">%1$s</xliff:g> <xliff:g id="minutes">%2$s</xliff:g></string>
    <string name="durationformatshort" translatable="false"><xliff:g id="format">%2$d:%3$02d</xliff:g></string>
    <string name="durationformatlong" translatable="false"><xliff:g id="format">%1$d:%2$02d:%3$02d</xliff:g></string>
    <string name="random_play">随机播放</string>
    <string name="loop_play">列表循环</string>
    <string name="play_one">单曲循环</string>
    <string name="click_try">重试被点击啦</string>
</resources>
