<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/group1"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_msg"
            android:title="@string/title_nav_msg"/>
        <item
            android:id="@+id/nav_stop"
            android:icon="@mipmap/topmenu_icn_night"
            android:title="@string/title_nav_stop"/>

        <item
            android:id="@+id/nav_night"
            android:icon="@mipmap/topmenu_icn_time"
            android:title="@string/title_nav_night"/>

        <item
            android:id="@+id/nav_skin"
            android:icon="@mipmap/topmenu_icn_skin"
            android:title="@string/title_nav_skin"/>

        <item
            android:id="@+id/nav_tobeartist"
            android:title="@string/title_nav_tobeartist"/>

        <item
            android:id="@+id/nav_upload"
            android:title="@string/title_nav_upload"/>

        <item
            android:id="@+id/nav_about"
            android:title="@string/title_nav_about"/>
    </group>
</menu>